--- a/app/styles.scss
+++ b/app/styles.scss
@@ -1,12 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Bungee+Shade');
+@import url('https://fonts.googleapis.com/css?family=Bungee+Shade|Karla');
 
 $background-color: teal;
 $text-color: white;
 $header-font: 'Bungee Shade', sans-serif;
+$small-font: 8px;
 
 body {
   background: rgb(29, 53, 63);
   color: $text-color;
-  font-family: 'Kara', sans-serif;
+  font-family: 'Karla', sans-serif;
   text-align: center;
 }
