--- a/app/components/Input/input-style.scss
+++ b/app/components/Input/input-style.scss
@@ -5,7 +5,8 @@ input {
   border: none;
   color: darkgrey;
   font-size: 10px;
-  height: 22px;
+  height: 26px;
+  margin: 5px;
   text-align: center;
   width: 12px;
 }
@@ -17,5 +18,9 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .set-name {
-  width: 40px;
+  width: 150px;
+}
+
+.joke-number{
+  width: 20px;
 }
